// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t0] route is initialized then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 1.vision (1.vision.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t1] 1.vision artifact is created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 4.0s ✗
              ├─ judge: .route/1.vision.guard.judge.i1p1.7525735d15fd716269c6b3d20865b2bf9b78d50bb00f77f8a2dc45ea81439c34.11e7d74f17319fe506092e9da8d4e630021328b0b3b8ad4b0ecfb930d3fb548f.j1.md
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t2] 1.vision is approved by human then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ approval = granted
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t3] 1.vision pass is reattempted after approval then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 4.6s ✓
              └─ judge: .route/1.vision.guard.judge.i1p1.7525735d15fd716269c6b3d20865b2bf9b78d50bb00f77f8a2dc45ea81439c34.80e4472813095ac96ff4c4f3708ccfa7e02c6f633e9c7a7bd9413411098c0df3.j1.md
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t4] next stone is requested after 1.vision then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 2.research (2.research.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t5] 2.research pass attempted without artifact then: stdout has good vibes 1`] = `""`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t6] 2.research artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 2.research
   └─ passage = allowed (unguarded)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t7] next stone is requested after 2.research then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 3.blueprint (3.blueprint.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t8] 3.blueprint artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished 0.1s ✓
      │       ├─ review: .route/3.blueprint.guard.review.i1.8ecd0d72072cc797d86550b0d9b21e18a7b1564f5e7c839f49ffc7e521c93b8a.r1.md
      │       └─ 1 blocker 🔴
      └─ judges
          ├─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   ├─ finished 6.5s ✓
          │   └─ judge: .route/3.blueprint.guard.judge.i1p1.8ecd0d72072cc797d86550b0d9b21e18a7b1564f5e7c839f49ffc7e521c93b8a.2df3e90184709b7748a9c221c208bf1e25ee826056e1be564b0c255516bab30c.j1.md
          └─ j2: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 5.5s ✗
              ├─ judge: .route/3.blueprint.guard.judge.i1p1.8ecd0d72072cc797d86550b0d9b21e18a7b1564f5e7c839f49ffc7e521c93b8a.2df3e90184709b7748a9c221c208bf1e25ee826056e1be564b0c255516bab30c.j2.md
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t9] 3.blueprint issues fixed and pass reattempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished 0.1s ✓
      │       └─ review: .route/3.blueprint.guard.review.i1.3df6d050813c533ac2148cb04a8ed25eea2f43b208d2e436e5ecccc6b61f023b.r1.md
      └─ judges
          ├─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   ├─ finished 4.2s ✓
          │   └─ judge: .route/3.blueprint.guard.judge.i1p1.3df6d050813c533ac2148cb04a8ed25eea2f43b208d2e436e5ecccc6b61f023b.e42840b4205ed0d910900abce8187d61df28a40c542e5141aa4b8c93b470f845.j1.md
          └─ j2: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 3.8s ✗
              ├─ judge: .route/3.blueprint.guard.judge.i1p1.3df6d050813c533ac2148cb04a8ed25eea2f43b208d2e436e5ecccc6b61f023b.e42840b4205ed0d910900abce8187d61df28a40c542e5141aa4b8c93b470f845.j2.md
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t10] 3.blueprint approved and pass reattempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       └─ · cached
      └─ judges
          ├─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   ├─ finished 5.3s ✓
          │   └─ judge: .route/3.blueprint.guard.judge.i2p1.3df6d050813c533ac2148cb04a8ed25eea2f43b208d2e436e5ecccc6b61f023b.51cfdc26031a379c6fb64ece2d42361d72716de9bb766d39ddeacaf0e3b3667d.j1.md
          └─ j2: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 4.6s ✓
              └─ judge: .route/3.blueprint.guard.judge.i2p1.3df6d050813c533ac2148cb04a8ed25eea2f43b208d2e436e5ecccc6b61f023b.51cfdc26031a379c6fb64ece2d42361d72716de9bb766d39ddeacaf0e3b3667d.j2.md
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t11] next stone is requested after 3.blueprint then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 5.execute (5.execute.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t12] 5.execute artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 5.execute
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ weather.ts
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished 0.1s ✓
      │       └─ review: .route/5.execute.guard.review.i1.e69c52d99a528437646594be8fe593ffc0603ffa31d30f8fc5675952f32062ce.r1.md
      └─ judges
          └─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished 3.6s ✓
              └─ judge: .route/5.execute.guard.judge.i1p1.e69c52d99a528437646594be8fe593ffc0603ffa31d30f8fc5675952f32062ce.d4596d30c742273e8a7055641e3f15cf459225eac062a8c096556e205920459a.j1.md
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t13] next stone is requested after all stones passed then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ status = all stones passed
"
`;
